objects/ssot__DataUsePurposeConsentAction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsentActionId__c</fullName>
        <label>Consent Action</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Consent Action</masterLabel>
            <refAttrDeveloperName>ConsentActionId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataUsePurposeId__c</fullName>
        <label>Data Use Purpose Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Use Purpose Id</masterLabel>
            <refAttrDeveloperName>DataUsePurposeId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Record Id</masterLabel>
            <refAttrDeveloperName>ExternalRecordId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>External Source Id</masterLabel>
            <refAttrDeveloperName>ExternalSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Data Use Purpose Category Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Use Purpose Category Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761165334_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataUsePurposeConsentAction_DataUseP_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>DataUsePurposeConsentAction_DataUseP_rel</relationshipLabel>
        <relationshipName>rel_1697761165334_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761165624_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataUsePurpose_Id_map_DataUsePurpose_rel</label>
        <referenceTo>ssot__DataUsePurpose__dlm</referenceTo>
        <relationshipLabel>DataUsePurpose_Id_map_DataUsePurpose_rel</relationshipLabel>
        <relationshipName>rel_1697761165624_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Consent Action (Why consent is granted) and Data Use Purpose (What will be done with the data) have a many-to-many relationship. For example the &apos;sharing&apos; Privacy Action applies to both Billing and Service (level 3) values of Data Use Purpose.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Data Use Purpose Consent Action</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Contact Consent Configuration</referenceEntityGroup>
        <referenceEntityName>DataUsePurposeConsentAction</referenceEntityName>
        <referenceEntitySubjectArea>Privacy</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>